Added ROP survival metrics with GUI implementation, clamped NCD result